--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-rev-append": "^0.1.8",
     "gulp-sourcemaps": "^2.2.0",
-    "gulp-uglify": "^2.0.0"
-  },
-  "dependencies": {
+    "gulp-uglify": "^2.0.0",
     "babel-plugin-transform-async-to-generator": "^6.22.0",
     "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
